fix: added border and adjusted gap between components

--- a/packages/cfd/src/sass/mt5-passwordmodal.scss
+++ b/packages/cfd/src/sass/mt5-passwordmodal.scss
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    max-width: 424px;
+    max-width: 4.24rem;
+    gap: 2rem;
 
     form {
         flex-grow: 1;
@@ -135,10 +136,11 @@
         &-content {
             display: flex;
             flex-direction: column;
-            padding: 2.4rem 0;
+            gap: 1rem;
             width: 100%;
             align-items: center;
-            margin-top: -2.5rem;
+            margin-top: auto;
+            padding-bottom: 1rem;
 
             .dc-icon {
                 margin-left: 1.1rem;
