--- a/packages/components/src/components/modal/modal.scss
+++ b/packages/components/src/components/modal/modal.scss
@@ -100,6 +100,7 @@
         width: 100%;
         line-height: 24px;
         align-items: center;
+        border-bottom: 2px solid var(--general-section-5) !important;
 
         &__border-bottom {
             border-bottom: 2px solid var(--general-section-5) !important;
